--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "seed": "cd server && npm run seed"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^5.3.0"
+  }
 }
