--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "apollo": "^2.32.1",
     "apollo-boost": "^0.4.9",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "react-apollo": "^3.1.5",
     "react-router-dom": "^5.2.0"
