--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "mechanic-management",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
@@ -16,8 +16,10 @@
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.7",
     "apollo-link-context": "^1.0.20",
+    "concurrently": "^5.1.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "if-env": "^1.0.4",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -48,10 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "main": "index.js",
-  "devDependencies": {},
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
