--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^4.0.1",
+    "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "stripe": "^8.132.0"
