--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "graphql-tag": "^2.10.3",
     "if-env": "^1.0.4",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
