--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "if-env": "^1.0.4",
+    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.0.0",
     "react": "^16.13.1",
