--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "if-env": "^1.0.4",
+    "jquery": "^3.5.1",
     "react-apollo": "^3.1.5",
     "react-router-dom": "^5.2.0"
   },
